compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_call_argument_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_call_argument_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
   ╭─[tests/fixtures/diagnostics/types/inference_call_argument_mismatch.ml:3:16]
 2 │   let add_one = fn(value) { value + 1 };
 3 │   let result = add_one("two");
   ·                ───────┬──────
   ·                       ╰── this call requires `i64`, but the argument provides `String`
 4 │   println("unreachable")
   ╰────
  help: pass an argument with the parameter type expected by the function
