compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_call_non_function.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_call_non_function.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × called value is not a function
   ╭─[tests/fixtures/diagnostics/types/inference_call_non_function.ml:3:16]
 2 │   let value = 41;
 3 │   let result = value(1);
   ·                ────┬───
   ·                    ╰── this value has type `i64`, so it cannot be called
 4 │   println("unreachable")
   ╰────
  help: call a function value or remove the function arguments
