compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_equality_operand_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_equality_operand_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × equality operands have different types
   ╭─[tests/fixtures/diagnostics/types/inference_equality_operand_mismatch.ml:2:3]
 1 │ fn equals_int(value: i64) {
 2 │   value == true
   ·   ──────┬──────
   ·         ╰── left side has type `i64`, but right side has type `bool`
 3 │ }
   ╰────
  help: compare values with the same type
