compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_list_item_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_list_item_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × list items have different types
   ╭─[tests/fixtures/diagnostics/types/inference_list_item_mismatch.ml:2:16]
 1 │ fn main() {
 2 │   let values = [1, "two"];
   ·                ─────┬────
   ·                     ╰── this list contains both `i64` and `String` values
 3 │   println("unreachable")
   ╰────
  help: make every item in the list have the same type
