compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_not_operand_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_not_operand_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × not expression requires Bool
   ╭─[tests/fixtures/diagnostics/types/inference_not_operand_mismatch.ml:3:7]
 2 │   let value = "false";
 3 │   dbg(!value)
   ·       ───┬──
   ·          ╰── this not expression has type `String`
 4 │ }
   ╰────
  help: use a Bool expression here
