compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_let_self_reference_unknown.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/let_self_reference_unknown.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown value
   ╭─[tests/fixtures/diagnostics/types/let_self_reference_unknown.ml:2:15]
 1 │ fn main() {
 2 │   let value = value;
   ·               ──┬──
   ·                 ╰── `value` is not bound in this scope
 3 │   dbg(value)
   ╰────
  help: bind the value with `let` before using it
