compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_list_len_non_list.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/list_len_non_list.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × invalid list_len argument
   ╭─[tests/fixtures/diagnostics/types/list_len_non_list.ml:3:16]
 2 │   let value = 1;
 3 │   dbg(list_len(value))
   ·                ──┬──
   ·                  ╰── `list_len` expects `list`, but this argument has type `i64`
 4 │ }
   ╰────
  help: pass a value with the expected type
